--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -1,5 +1,6 @@
 {% extends "actions/base.html" %}
 {% load dated_static %}
+{% block title %}Actions to Repower at Home{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     {% if tag_filter %}
