--- a/groups/templates/groups/group_list.html
+++ b/groups/templates/groups/group_list.html
@@ -1,4 +1,5 @@
 {% extends "groups/base.html" %}
+{% block title %}Teams on Repower at Home{% endblock %}
 {% block breadcrumbs %}
 <a href="{% url index %}">Home</a> &rsaquo;
 Teams
