--- a/invite/templates/invite/welcome.html
+++ b/invite/templates/invite/welcome.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block content %}
+{% block right_content %}
 <h1>Welcome</h1>
 <p>
     You need to <a href="{% url login %}?next={{ request.path }}">Login</a> or 
