--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -6,7 +6,7 @@
 <link rel="alternate" type="application/atom+xml"  href="{% url blog_feed %}" title="Repower at Home Blog" />
 {% endblock %}
 
-{% block title %}{% endblock %}
+{% block title %}Repower at Home Blog{% endblock %}
 
 {% block content_title %}{% endblock %}
 {% block breadcrumbs %}
