--- a/templates/rah/about_us.html
+++ b/templates/rah/about_us.html
@@ -1,5 +1,5 @@
 {% extends "rah/base.html" %}
-{% block title %}About Us{% endblock %}
+{% block title %}About Repower at Home{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     About Us
