--- a/templates/rah/search.html
+++ b/templates/rah/search.html
@@ -1,4 +1,5 @@
 {% extends "rah/base.html" %}
+{% block title %}Results for '{{request.GET.q}}'{% endblock %}
 {% block right_content %}
 <div class="box_three_top"></div>
 <div class="box_three_middle">
