--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -1,4 +1,5 @@
 {% extends "groups/base.html" %}
+{% block title %}Create a Team{% endblock %}
 {% block breadcrumbs %}
 <a href="{% url index %}">Home</a> &rsaquo;
 <a href="{% url group_list %}">Teams</a> &rsaquo;
