--- a/groups/templates/groups/group_edit.html
+++ b/groups/templates/groups/group_edit.html
@@ -1,4 +1,5 @@
 {% extends "groups/base.html" %}
+{% block title %}Edit {{ group.name }} settings{% endblock %}
 {% block breadcrumbs %}
     <a href="{% url index %}">Home</a> &rsaquo;
     <a href="{% url group_list %}">Teams</a> &rsaquo;
