--- a/templates/403.html
+++ b/templates/403.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Forbidden{% endblock %}
 {% block right_content %}
 <div class="box_two_top"></div>
 <div class="box_two_middle">
