--- a/templates/500.html
+++ b/templates/500.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <title>Whoops | Repower at Home</title>
+    <title>Don't Panic! </title>
   </head>
   <body>
-      <h1>Fail Whale</h1>
+      <h1>Whuh Oh</h1>
       <p>Sorry, but the requested page is unavailable due to a
       server hiccup.</p>
   </body>
