--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
         {% load dated_static %}
-        <title>{% block title %}{% endblock %} Repower at Home</title>
+        <title>{% block title %}Repower at Home{% endblock %}</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
+        <meta name="keywords" content="energy efficiency, home energy, climate change, repower at home, alliance for climage protection" />
+        <meta name="description" content="{% block meta_desc %}{% endblock %}" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
         {% if debug %}
             <link rel="stylesheet" href="{% dated_static 'css/style.css' %}" type="text/css" media="screen" charset="utf-8"/>
