--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -1,6 +1,7 @@
 {% extends "rah/base.html" %}
 {% load record %}
 {% load dated_static %}
+{% block title %}{{profile_user.get_full_name}}'s profile{% endblock %}
 {% block extralinks %}
     <link rel="alternate" type="application/atom+xml"  href="{% url user_activity_feed profile.user.id %}" title="Repower at Home User Activity" />
 {% endblock %}
