--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,5 +1,6 @@
 {% extends "rah/base.html" %}
 {% block tongue %}{% endblock tongue %}
+{% block title %}Change your Password{% endblock %}
 {% block breadcrumbs %}
  <div class="prefix_3">
     <a href="{% url index %}">Home</a> &rsaquo;
