--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,5 +1,6 @@
 {% extends "rah/base.html" %}
 {% block tongue %}{% endblock tongue %}
+{% block title %}Register for Repower at Home{% endblock %}
 {% block breadcrumbs %}
  <div class="prefix_3">
     <a href="{% url index %}">Home</a> &rsaquo;
