--- a/templates/rah/profile_edit.html
+++ b/templates/rah/profile_edit.html
@@ -9,7 +9,7 @@
         </ul>
         <div id="account_tab">
             <p>
-                <a href="http://en.gravatar.com/">Change your image on gravatar.com</a><br/>
+                <a href="http://en.gravatar.com/" target="_blank">Change your avatar on gravatar.com</a><br/>
                 <a href="{% url password_change %}">Change your password</a><br/>
                 {% if profile.twitter_access_token %}
                     Your account is linked with twitter (<a href="{% url twitter_oauth_unauth %}">unlink</a>)
