--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,7 @@ body {
     font: 14px/18px Helvetica, Arial, sans-serif;
     color: #333; 
     background-color: #b0d8f2; }
-a { color: #00AAD8; text-decoration: none; }
+a { color: #5fbdcc; text-decoration: none; }
 a:hover { text-decoration:underline; }
 a:active { color: #6EC3D1; text-decoration:underline; }
 h1, h1 a {
