--- a/static/css/style.css
+++ b/static/css/style.css
@@ -495,6 +495,8 @@ ul#vampire_worksheet_wizard_nav {
 Events Events Events Events Events Events Events Events Events Events Events Events Events Events Events Events Events 
 --------------------------------------------------------------------------------------------------------------------- */
 #event_map { width: 400px; height: 200px; }
+.event_inline_placeholder { color: grey; font-style: italic; }
+.editable { }
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
