editable fields in the guest list, now highlight yellow on the mouseover event

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -497,6 +497,7 @@ Events Events Events Events Events Events Events Events Events Events Events Eve
 #event_map { width: 400px; height: 200px; }
 .event_inline_placeholder { color: grey; font-style: italic; }
 .editable { }
+.editable_highlight { background-color: #ffff99; }
 
 /* ---------------------------------------------------------------------------------------------------------------------
 Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
