-Added sitemaps app and sitemap classes for actions, groups, and rah. -Added flatpages app and converted about, terms, and privacy pages to use it. (these pages can now be edited through the admin interface) -Commented out S3 syncing in capfile (we're not using it and it take a long time) -Cleaned up urls.py with some comments and wrapped remaining patterns in url()

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -514,9 +514,7 @@ Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc Misc 
 .right {text-align:right;}
 .blog_byline {}
 .post_body li,
-#terms_of_use li,
-#privacy_policy li,
-#about_us li{ list-style: disc; }
+#flat_page li{ list-style: disc; }
 
 /* spite icons */
 .icon_gt {background: url(../images/theme/0000000003_sprite_minor_col.png) -20px -303px; width:5px; height:10px; display:inline-block;}
