--- a/templates/base.html
+++ b/templates/base.html
@@ -81,9 +81,9 @@
                     Copyright &copy; <a href="http://www.climateprotect.org/">The Alliance for Climate Protection</a> 
                     2010. All Rights Reserved. 
                     <a href="{% url rah.views.feedback %}" class="feedback_link">Feedback</a> | 
-                    <a href="{% url terms_of_use %}">Terms of Use</a> | 
-                    <a href="{% url privacy_policy %}">Privacy Policy</a> |
-                    <a href="{% url about_us %}">About Us</a>
+                    <a href="/terms/">Terms of Use</a> | 
+                    <a href="/privacy/">Privacy Policy</a> |
+                    <a href="/about/">About Us</a>
                 </p>
             </div>
         </div>
