--- a/events/templates/events/_guest_row.html
+++ b/events/templates/events/_guest_row.html
@@ -6,4 +6,4 @@
 {% endif %}
 <td id="{% url event-guests-edit-email event.id,guest.id %}" class="editable">{{ guest.email }}</td>
 <td id="{% url event-guests-edit-phone event.id,guest.id %}" class="editable">{{ guest.phone }}</td>
-<td>{{ guest.status }}</td>
+<td id="{% url event-guests-edit-status event.id,guest.id %}" class="editable rsvp_select">{{ guest.status }}</td>
