create and edit event pages now have a cancel link

--- a/events/templates/events/_form.html
+++ b/events/templates/events/_form.html
@@ -1,5 +1,6 @@
 <form id="event_form" action="" method="post">
     {{ form.as_p }}
     {% csrf_token %}
-    <input type="submit" value="{{ button_text|default:'Submit' }}" />
+    <input type="submit" value="{{ button_text|default:'Submit' }}" /> |
+    <a href="{{ cancel_link }}">cancel</a>
 </form>
