created a 3 select box widget for event start time and replaced the event end time with a duration field. [completed: 335]

--- a/events/templates/events/show.html
+++ b/events/templates/events/show.html
@@ -21,7 +21,7 @@
             </div>
             <div>
                 <h3>When</h3>
-                <p>{{ event.when|date }} from {{ event.start|time }} to {{ event.end|time }}</p>
+                <p>{{ event.when|date }} at {{ event.start|time }}</p>
             </div>
             <div>
                 <h3>Where</h3>
