adding meta tag description

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
         <meta name="keywords" content="energy efficiency, home energy, climate change, repower at home, alliance for climage protection" />
-        <meta name="description" content="{% block meta_desc %}{% endblock %}" />
+        <meta name="description" content="{% block meta_desc %}Repower at Home helps you save energy at home and organize your community for a cleaner future.{% endblock %}" />
         <link rel="shortcut icon" href="{% dated_static 'images/theme/favicon.ico' %}"/>
         {% if debug %}
             <link rel="stylesheet" href="{% dated_static 'css/style.css' %}" type="text/css" media="screen" charset="utf-8"/>
