--- a/events/templates/events/guests.html
+++ b/events/templates/events/guests.html
@@ -27,6 +27,7 @@
                             <th>Name</th>
                             <th>Email</th>
                             <th>Phone</th>
+                            <th>Zipcode</th>
                             <th>Status</th>
                         </tr>
                     </thead>
