Adding webmaster meta tags for yahoo and bing

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
         {% load dated_static %}
         <title>{% block title %}Repower at Home{% endblock %}</title>
         <meta name="google-site-verification" content="LKUJZqwKMnEGjg_dQNKL-2eLLK3yvftU0RKv7SuymGQ" />
+        <meta name="msvalidate.01" content="DC928E84A1569AF4933A7DB431C08DB4" />
+        <meta name="y_key" content="9d9c6c76735e5a92"/>
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
         <meta name="keywords" content="energy efficiency, home energy, climate change, repower at home, alliance for climage protection" />
         <meta name="description" content="{% block meta_desc %}Repower at Home helps you save energy at home and organize your community for a cleaner future.{% endblock %}" />
