added an comments box to the rsvp form [completed: 342]

--- a/events/templates/events/guests.html
+++ b/events/templates/events/guests.html
@@ -29,6 +29,7 @@
                             <th>Phone</th>
                             <th>Zipcode</th>
                             <th>Status</th>
+                            <th>Comments</th>
                         </tr>
                     </thead>
                     <tbody>
