--- a/events/templates/events/_guest_row.html
+++ b/events/templates/events/_guest_row.html
@@ -8,3 +8,8 @@
 <td id="{% url event-guests-edit-phone event.id,guest.id %}" class="editable">{{ guest.phone }}</td>
 <td id="{% url event-guests-edit-zipcode event.id,guest.id %}" class="editable">{{ guest.location.zipcode }}</td>
 <td id="{% url event-guests-edit-status event.id,guest.id %}" class="editable rsvp_select">{{ guest.status }}</td>
+<td>
+    {% if guest.comments %}
+        <img class="ui-icon ui-icon-comment tooltip" title="{{ guest.comments }}"></img>
+    {% endif %}
+</td>
