--- a/events/templates/events/_rsvp_form.html
+++ b/events/templates/events/_rsvp_form.html
@@ -1,6 +1,10 @@
 <form id="rsvp_form" action="{% url event-rsvp event.id %}" method="post">
     {{ rsvp_form.errors }}
     <p>{{ rsvp_form.rsvp_status }}</p>
+    <p>
+        {{ rsvp_form.comments.label }}
+        {{ rsvp_form.comments }}
+    </p>
     <p>{{ rsvp_form.token }}</p>
     {% csrf_token %}
     <input type="submit" value="Submit" />
