added a better description to the events landing page

--- a/events/templates/events/_event_nugget_list.html
+++ b/events/templates/events/_event_nugget_list.html
@@ -2,7 +2,7 @@
     {% for event in events %}
         <li>
             <a href="{{ event.get_absolute_url }}">{{ event }}</a>
-            <span>{{ event.when|date }} @ {{ event.start }}</span>
+            <span>{{ event.when|date }} @ {{ event.start|time }}</span>
         </li>
     {% endfor %}
 </ul>
