added a missing closing div to the teams create page

--- a/groups/templates/groups/group_create.html
+++ b/groups/templates/groups/group_create.html
@@ -17,5 +17,6 @@ Create Team
         </form>
     </div>
     <div class="box_two_bottom"></div>
+</div>
 {% endblock %}
 {% block js %}page_group_create{% endblock %}
