--- a/events/templates/events/_form.html
+++ b/events/templates/events/_form.html
@@ -5,7 +5,7 @@
     <div class="form_row {% if field.errors %}error{% endif %}{% if 'TextInput' in field.field.widget|pprint or 'Textarea' in field.field.widget|pprint %} overset{% endif %}">
         {{ field.label_tag }}
         {{ field }}
-        {{ field.help_text }}
+        <span class="event_help_text">{{ field.help_text }}</span>
         {% for error in field.errors %}
             <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
         {% endfor %}
