added headers to the event forms

--- a/events/templates/events/create.html
+++ b/events/templates/events/create.html
@@ -9,6 +9,7 @@
     <div class="grid_6 alpha">
         <div class="box_two_top"></div>
         <div class="box_two_middle">
+            <h1>Create an Event</h1>
             <form id="event_form" action="" method="post">
                 {% include "events/_form.html" %}
                 {% csrf_token %}
