--- a/events/templates/events/edit.html
+++ b/events/templates/events/edit.html
@@ -10,6 +10,7 @@
     <div class="grid_6 alpha">
         <div class="box_two_top"></div>
         <div class="box_two_middle">
+            <h1>Edit your Event</h1>
             <form id="event_form" action="" method="post">
                 {% include "events/_form.html" %}
                 {% csrf_token %}
