--- a/events/templates/events/_form.html
+++ b/events/templates/events/_form.html
@@ -1,13 +1,17 @@
 {% for error in form.non_field_errors %}
     <div class="overset_form_message error">{{ error }}</div>
 {% endfor %}
-{% for field in form %}
+{% for field in form.visible_fields %}
     <div class="form_row {% if field.errors %}error{% endif %}{% if 'TextInput' in field.field.widget|pprint or 'Textarea' in field.field.widget|pprint %} overset{% endif %}">
-        {{ field.label_tag }}
-        {{ field }}
+        {{ field.label_tag }}{{ field }}
         <span class="event_help_text">{{ field.help_text }}</span>
         {% for error in field.errors %}
             <label class="error" for="{{ field.auto_id }}">{{ error|escape }}</label>
         {% endfor %}
     </div>
 {% endfor %}
+<div class="hidden">
+    {% for field in form.hidden_fields %}
+        {{ field }}
+    {% endfor %}
+</div>
