--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,9 @@
                         <a href="{% url index %}" id="nav_home">Home</a>
                         <a href="{% url action_show %}" id="nav_actions" >Actions</a>
                         <a href="{% url group_list %}" id="nav_teams">Teams</a>
+                        <a href="{% url event-list %}" id="nav_events">Events</a>
                         <a href="{% url blog_index %}" id="nav_blog">Blog</a>
-                        <a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a>
+                        {# <a href="{% url rah.views.feedback %}" id="nav_feedback" class="feedback_link">Feedback</a> #}
                     </div>
                 </div>
             </div>
