--- a/events/templates/events/rsvp_confirm.html
+++ b/events/templates/events/rsvp_confirm.html
@@ -7,7 +7,7 @@
             <h2>Thanks for the RSVP</h2>
             <p>We'll put you down as <span>{{ guest.get_rsvp_status_display }}</span></p>
                 <form action="{% url event-rsvp-confirm event.id %}" method="post">
-                    {{ form.as_p }}
+                    {% include "events/_form.html" %}
                     {% csrf_token %}
                     <input type="submit" value="Confirm RSVP" />
                 </form>
